--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,14 @@
   "name": "@comamoca/kido",
   "version": "0.1.0",
   "exports": "./src/main.ts",
+  "lint": {
+    "rules": {
+      "exclude": [
+        "no-slow-types"
+      ]
+    }
+  },
+
   "imports": {
     "@core/unknownutil": "jsr:@core/unknownutil@^4.3.0",
     "@es-toolkit/es-toolkit": "jsr:@es-toolkit/es-toolkit@^1.25.2",
